TAG: gbseqload-6-0-9-2
TAG: gbseqload-6-0-9-1
DATE: 04/04/2017
STAFF: sc
CHANGES: Merge tr12488 branch to trunk

TAG: gbseqload-tr12488-1
DATE: 03/20/2017
STAFF: sc
CHANGES: MOUSE CRISPIES project Contigs epic
1) GBSeqloader.java - use GBInputFile instead of GBInputFileNoSeq
    because niether refseq or genbank contigs have the ORIGIN section so
    we will now parse the entire record.

TAG: gbseqload-6-0-4-1
DATE: 06/16/2016
STAFF: lec 
CHANGES:
1) convert to git

TAG: gbseqload-6-0-3-1
DATE: 04/25/2016
STAFF: sc
CHANGES: TR12326 gbseqload failure, memory exception
1) gbseqload.config.default - added SEQ_USE_ACCESSION_FULL_CACHE=false
    lib_java_dla SequenceLoadCfg using this config setting that does not exist
    so defaulting to full cache

TAG: gbseqload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) gbseqload.config.default: Don't mail curator log to mgiadmin

TAG: gbseqload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgre conversion release tag

TAG: gbseqload-5-2-1-2
DATE: 05/05/2015
STAFF: sc
CHANGES:
* gbseqload.config.default - APP_CAT_METHOD="gunzip -c". Removed /usr/local/bin

TAG: gbseqload-5-2-1-1
DATE: 05/05/2015
STAFF: sc
CHANGES: 
* gbseqload.config.default - removed QC report config
* gbseqload.sh - removed calls to QC reports

TAG: gbseqload-tr11750-3
DATE: 06/26/2015
STAFF: sc
CHANGES: set JAVARUNTIMEOPTS="-Xms2G -Xmx2G"

TAG: gbseqload-tr11750-2
DATE: 05/06/2015
STAFF: sc
CHANGES: gbseqload.config.default - change APP_CAT_METHOD='gunzip -c'
i.e. remove full path to gunzip

TAG: gbseqload-tr11750-1
DATE: 05/05/2015
STAFF: sc
CHANGES: 
* gbseqload.config.default - removed QC report config
* gbseqload.sh - removed calls to QC reports
* Any changes that Kevin has made on this branch

TAG: gbseqload-tr11750-BP
DATE: 04/15/2015
STAFF: kstone

TAG: gbseqload-5-1-7-1
DATE: 01/27/2014
STAFF: lec
CHANGES: 
1) TR11555/TR10841/remove MGI_AttributeHistory from test

TAG: gbseqload-4-2-0-1
DATE: 02/16/2009
STAFF: sc