@@ -1,3 +1,8 @@
+TAG: gbseqload-tr12662-BP
+DATE: 02/01/2018
+STAFF: sc
+CHANGES: GMC project
+
 TAG: gbseqload-6-0-9-2
 TAG: gbseqload-6-0-9-1
 DATE: 04/04/2017
